design sidebar filter in shop page

--- a/html/unique/cart.html
+++ b/html/unique/cart.html
@@ -1124,7 +1124,7 @@
                   <table class="table equal-space table-action shopping-bag">
                     <thead> 
                       <tr> 
-                        <th>Name</th>
+                        <th>Item Name</th>
                         <th>Price</th>
                         <th>Quantity</th>
                         <th>Total</th>
@@ -1532,7 +1532,7 @@
             <div class="col-span-3 xl:col-span-4 lg:col-span-12">
               <div class="card sticky top-0"> 
                 <div class="card-header">
-                  <h3 class="mb-2 font-bold text-title">Cart information </h3>
+                  <h3 class="mb-2 font-bold text-title">Cart Information </h3>
                   <div class="divider w-full"> </div>
                 </div>
                 <div class="card-body flex flex-col gap-2"> 
