--- a/html/unique/invoice.html
+++ b/html/unique/invoice.html
@@ -1158,7 +1158,7 @@
                               <label class="checkbox cursor-pointer block w-4 h-4">
                                 <input class="peer" type="checkbox">
                                 <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
-                              </label>Product
+                              </label>Item Name
                             </div>
                           </th>
                           <th>User Name</th>
