design product view page

--- a/html/unique/modal.html
+++ b/html/unique/modal.html
@@ -1830,7 +1830,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-1" name="modal-1" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-1"></label>
-      <div class="modal peer-checked:block w-[18.75rem]">
+      <div class="modal peer-checked:opacity-100 peer-checked:visible w-[18.75rem]">
         <div class="modal-header">
           <h3>Hurry !!</h3>
           <label for="modal-1"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
@@ -1845,7 +1845,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-2" name="modal-2" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-2"></label>
-      <div class="modal peer-checked:block w-[15.625rem]">
+      <div class="modal peer-checked:opacity-100 peer-checked:visible w-[15.625rem]">
         <div class="modal-header">
           <h3>Web Design</h3>
           <label for="modal-2"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
@@ -1858,7 +1858,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-3" name="modal-3" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-3"></label>
-      <div class="modal w-11/12 max-w-2xl peer-checked:block">
+      <div class="modal w-11/12 max-w-2xl peer-checked:opacity-100 peer-checked:visible">
         <div class="modal-header">
           <h3>Start with your goals</h3>
           <label for="modal-3"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
@@ -1894,7 +1894,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-4" name="modal-4" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-4"></label>
-      <div class="modal w-11/12 max-w-5xl peer-checked:block ">
+      <div class="modal w-11/12 max-w-5xl peer-checked:opacity-100 peer-checked:visible">
         <div class="modal-header">
           <h3>UX Designer</h3>
           <label for="modal-4"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
@@ -1929,7 +1929,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-5" name="modal-5" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-5"></label>
-      <div class="modal w-[18.75rem] peer-checked:block">
+      <div class="modal w-[18.75rem] peer-checked:opacity-100 peer-checked:visible">
         <div class="modal-header">
           <h3>Cookies</h3>
           <label for="modal-5"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
@@ -1946,7 +1946,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-6" name="modal-6" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-6"></label>
-      <div class="modal modal-center peer-checked:block w-[18.75rem]">
+      <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible w-[18.75rem]">
         <div class="modal-body text-center">
           <div class="modal-img"><img class="w-14" src="../../assets/images/modal/danger.gif" alt="danger"></div>
           <h3 class="text-lg font-bold mb-2">Ohh! Something went wrong!</h3>
@@ -1958,7 +1958,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-7" name="modal-7" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-7"></label>
-      <div class="modal peer-checked:block w-[18.75rem]">
+      <div class="modal peer-checked:opacity-100 peer-checked:visible w-[18.75rem]">
         <div class="modal-header">
           <h3>Wed Designer</h3>
           <label for="modal-7"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
@@ -2003,7 +2003,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-8" name="modal-8" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-8"></label>
-      <div class="modal max-w-sm peer-checked:block">
+      <div class="modal max-w-sm peer-checked:opacity-100 peer-checked:visible">
         <div class="modal-body">
           <form class="theme-form flex flex-col gap-3">
             <h3>Log in to account</h3>
@@ -2021,16 +2021,16 @@
                   <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
                 </label><span>Remember Me</span>
               </div>
-              <div class="!mb-0"><a href="/forgot-password">Forgot Password? </a></div>
+              <div class="!mb-0"><a href="forgot-password.html">Forgot Password? </a></div>
             </div>
             <div class="!mb-0">
-              <button class="btn btn-primary text-white">Sign in</button>
+              <button class="btn btn-primary text-white" a href="index.html">Sign in</button>
             </div>
             <div>
               <h4>Or Sign in with </h4>
             </div>
             <div class="social"><a class="flex items-center justify-center gap-1 btn !text-linkedin" href="https://www.linkedin.com/login"><img src="../../assets/images/social/linkd2.svg" alt="linkedin">Linkedin</a><a class="flex items-center justify-center gap-1 btn !text-twitter" href="https://twitter.com/i/flow/login"><img src="../../assets/images/social/tw2.svg" alt="twitter">Twitter </a><a class="flex items-center justify-center gap-1 btn !text-facebook" href="https://www.facebook.com/"> <img src="../../assets/images/social/fb2.svg" alt="facebook">Facebook  </a></div>
-            <div class="text-center"><span>Don't have an account? <small class="cursor-pointer">Create Now</small></span></div>
+            <div class="text-center"><span>Don't have an account? <a href="register.html">Create Now</a></span></div>
           </form>
         </div>
       </div>
@@ -2038,7 +2038,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-9" name="modal-9" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-9"></label>
-      <div class="modal w-[18.75rem] peer-checked:block">
+      <div class="modal w-[18.75rem] peer-checked:opacity-100 peer-checked:visible">
         <div class="modal-header">
           <h3>Modal Title</h3>
           <label for="modal-9"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
@@ -2053,7 +2053,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-10" name="modal-10" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-10"></label>
-      <div class="modal modal-top-left peer-checked:block w-[18.75rem]">
+      <div class="modal modal-top-left peer-checked:opacity-100 peer-checked:visible w-[18.75rem]">
         <div class="modal-body text-center">
           <ul class="modal-img">
             <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
@@ -2068,7 +2068,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-11" name="modal-11" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-11"></label>
-      <div class="modal modal-top-center peer-checked:block w-[18.75rem]">
+      <div class="modal modal-top-center peer-checked:opacity-100 peer-checked:visible w-[18.75rem]">
         <div class="modal-body text-center">
           <ul class="modal-img">
             <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
@@ -2083,7 +2083,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-14" name="modal-14" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-14"></label>
-      <div class="modal modal-top-right peer-checked:block w-[18.75rem]">
+      <div class="modal modal-top-right peer-checked:opacity-100 peer-checked:visible w-[18.75rem]">
         <div class="modal-body text-center">
           <ul class="modal-img">
             <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
@@ -2098,7 +2098,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-12" name="modal-12" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-12"></label>
-      <div class="modal modal-bottom-left peer-checked:block w-[18.75rem]">
+      <div class="modal modal-bottom-left peer-checked:opacity-100 peer-checked:visible w-[18.75rem]">
         <div class="modal-body text-center">
           <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
           <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
@@ -2110,7 +2110,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-13" name="modal-13" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-13"></label>
-      <div class="modal modal-bottom-center peer-checked:block w-[18.75rem]">
+      <div class="modal modal-bottom-center peer-checked:opacity-100 peer-checked:visible w-[18.75rem]">
         <div class="modal-body text-center">
           <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
           <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
@@ -2122,7 +2122,7 @@
     <div class="modal-main">
       <input class="peer" id="modal-15" name="modal-15" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="modal-15"></label>
-      <div class="modal modal-bottom-right peer-checked:block w-[18.75rem]">
+      <div class="modal modal-bottom-right peer-checked:opacity-100 peer-checked:visible w-[18.75rem]">
         <div class="modal-body text-center">
           <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
           <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
