--- a/html/unique/reset-password.html
+++ b/html/unique/reset-password.html
@@ -42,7 +42,7 @@
                 <div>
                   <h4>Or Sign in with </h4>
                 </div>
-                <div class="social sm:flex-col"><a class="flex items-center justify-center gap-1 btn !text-linkedin" href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin-in"></i>  Linkedin</a><a class="flex items-center justify-center gap-1 btn !text-twitter" href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter"></i>  Twitter</a><a class="flex items-center justify-center gap-1 btn instagram !text-instagram" href="https://www.facebook.com/">
+                <div class="social sm:flex-col"><a class="flex items-center justify-center gap-1 btn !text-linkedin" href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin-in"></i>  Linkedin</a><a class="flex items-center justify-center gap-1 btn !text-twitter" href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter"></i>  Twitter</a><a class="flex items-center justify-center gap-1 btn instagram !text-instagram" href="https://www.instagram.com/accounts/login/">
                     <svg width="0" height="0">
                       <radialgradient id="rg" r="150%" cx="30%" cy="107%">
                         <stop stop-color="#fdf497" offset="0"></stop>
