--- a/html/unique/checkout.html
+++ b/html/unique/checkout.html
@@ -1122,40 +1122,40 @@
           <div class="grid grid-cols-12 gap-card-gap card checkout-detail"> 
             <div class="col-span-8 lg:col-span-12 w-full tabs flex flex-col">
               <div class="mb-1 tab-links flex items-center 3sm:justify-center">
-                <button class="tab product-tab w-full items-center tab-active tab-link" data-tabFilter="1"> <i class="fa-regular fa-user w-[1.125rem] h-[1.125rem] text-title"></i>Billing Info  </button>
-                <button class="tab product-tab w-full items-center tab-link" data-tabFilter="2"><i class="fa-solid fa-truck-fast w-[1.125rem] h-[1.125rem] text-title"></i>Shipping Info</button>
-                <button class="tab product-tab w-full items-center tab-link" data-tabFilter="3"><i class="fa-solid fa-money-bill w-[1.125rem] h-[1.125rem] text-title"></i>Payment Info  </button>
-                <button class="tab product-tab w-full items-center tab-link" data-tabFilter="3"><i class="fa-regular fa-circle-check w-[1.125rem] h-[1.125rem] text-title"></i>Finish  </button>
+                <button class="tab product-tab w-full items-center text-sm tab-active tab-link" data-tabFilter="1"> <i class="fa-solid fa-user"></i>Billing Info  </button>
+                <button class="tab product-tab w-full items-center text-sm tab-link" data-tabFilter="2"><i class="fa-solid fa-truck-fast"></i>Shipping Info</button>
+                <button class="tab product-tab w-full items-center text-sm tab-link" data-tabFilter="3"><i class="fa-solid fa-money-bill"></i>Payment Info  </button>
+                <button class="tab product-tab w-full items-center text-sm tab-link" data-tabFilter="3"><i class="fa-solid fa-circle-check"></i>Finish  </button>
               </div>
               <div class="tabs-content">
                 <div class="tab-pan fade active show first:rounded-tl-none rounded-5 border-none !px-1 !pb-0" data-tabContent="1">
                   <div>
-                    <h6 class="text-title font-semibold mb-2">Billing Information </h6>
+                    <h5 class="text-title font-semibold mb-2">Billing Information </h5>
                     <p class="text-content3 mb-5"> Fill up the following information </p>
                     <form class="theme-form flex flex-col gap-4 m-0" action="index.html">
                       <div class="grid grid-cols-12 gap-5">
                         <div class="col-span-6">
                           <label for="firstName">First Name</label>
-                          <input type="text" id="firstName" required>
+                          <input type="text" id="firstName" placeholder="Enter your first name" required>
                         </div>
                         <div class="col-span-6">
                           <label for="lastName">Last Name</label>
-                          <input type="text" id="lastName" required>
+                          <input type="text" id="lastName" placeholder="Enter your last name" required>
                         </div>
                       </div>
                       <div class="grid grid-cols-12 gap-5">
                         <div class="col-span-6">
-                          <label for="number">Phone No</label>
-                          <input class="rounded" type="Number" id="number" maxlength="10" pattern="d{10}" required>
+                          <label for="number">Contact No</label>
+                          <input class="rounded" type="Number" id="number" placeholder="Enter your contact no" maxlength="10" pattern="d{10}" required>
                         </div>
                         <div class="col-span-6">
                           <label for="email">Email</label>
-                          <input type="email" id="email" required>
+                          <input type="email" id="email" placeholder="Enter your email id" required>
                         </div>
                       </div>
                       <div> 
                         <label for="address">Address </label>
-                        <textarea class="p-[11px] w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter the address.." row="3" id="address"></textarea>
+                        <textarea class="p-[11px] focus:border-none w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter your address.." row="3" id="address"></textarea>
                       </div>
                       <div class="grid grid-cols-12 gap-5">
                         <div class="col-span-4">
@@ -1172,11 +1172,11 @@
                         </div>
                         <div class="col-span-4">
                           <label for="state">State</label>
-                          <input type="text" id="state" required>
+                          <input type="text" id="state" placeholder="Enter your state" required>
                         </div>
                         <div class="col-span-4">
                           <label for="postcode">Postcode</label>
-                          <input type="text" id="postcode" required>
+                          <input type="text" id="postcode" placeholder="Enter your postcode" required>
                         </div>
                       </div>
                       <div class="flex items-center gap-2">
@@ -1188,21 +1188,184 @@
                       </div>
                       <div> 
                         <label for="otherNotes">Other Notes </label>
-                        <textarea class="p-[11px] w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter the address.." row="3" id="otherNotes"></textarea>
+                        <textarea class="p-[11px] focus:border-none w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter your address.." row="3" id="otherNotes"></textarea>
                       </div>
                       <div class="flex justify-between items-center">
-                        <button class="btn bg-secondary text-xs text-white flex items-center gap-2 !w-fit" type="button"> <i class="w-4 h-4 stroke-white" data-feather="arrow-left"></i> Return to Shopping Cart</button>
-                        <button class="btn btn-primary text-xs text-white flex items-center gap-2 !w-fit" type="button">
+                        <button class="btn bg-secondary text-xs text-white flex items-center gap-2 !w-fit !m-0" type="button"> <i class="w-4 h-4 stroke-white" data-feather="arrow-left"></i> Return to Shopping Cart</button>
+                        <button class="btn btn-primary text-xs text-white flex items-center gap-2 !w-fit !m-0" type="button">
                             Proceed to Next<i class="w-4 h-4 stroke-white" data-feather="truck"></i></button>
                       </div>
                     </form>
                   </div>
                 </div>
                 <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0" data-tabContent="2">
-                  <p class="text-xs text-gray-500">We use tabs to manage space and to make the website more attractive. Tabs are used to navigate and display different content around the website. We use tabs to manage space and to make the website more attractive.</p>
+                  <div>
+                    <h5 class="text-title font-semibold mb-2">Shipping Information </h5>
+                    <p class="text-content3 mb-5">Fill up the following information to send you the order</p>
+                    <div class="flex justify-between gap-2 items-center mb-5"> 
+                      <h6 class="text-title font-medium">Saved Address </h6>
+                      <button class="btn bg-gray-light p-1" type="button"> <i class="w-4 h-4 stroke-content3" data-feather="plus"></i></button>
+                    </div>
+                    <div class="grid grid-cols-12 gap-card-gap mb-5"> 
+                      <div class="col-span-4">
+                        <div class="border border-border-light p-4"> 
+                          <div class="flex justify-between gap-2 items-center mb-4"> 
+                            <div class="flex items-center gap-2">
+                              <label class="checkbox checkbox-sm cursor-pointer"> 
+                                <input class="peer" type="checkbox" checked>
+                                <div class="checkbox-indicator peer-checked:!bg-primary rounded-full !border-primary"> <i data-feather="check"></i></div>
+                              </label>
+                              <p>Home </p>
+                            </div>
+                            <div class="flex items-center gap-2">
+                              <svg class="w-4 h-4 stroke-title"> 
+                                <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
+                              </svg>
+                              <svg class="w-4 h-4 stroke-title"> 
+                                <use href="../../assets/svg/_sprite.svg#Delete"> </use>
+                              </svg>
+                            </div>
+                          </div>
+                          <div class="flex flex-col gap-2"> 
+                            <h6 class="text-title font-bold">Filomena Green </h6>
+                            <p class="text-content3 text-xs"> <span class="font-semibold">Address: </span>	2211 Fruitville Rd, Sarasota, Florida, US 34237</p>
+                            <p class="text-content3 text-xs"> <span class="font-semibold">Contact: </span>	(941) 321-5643</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-span-4">
+                        <div class="border border-border-light p-4"> 
+                          <div class="flex justify-between gap-2 items-center mb-4"> 
+                            <div class="flex items-center gap-2">
+                              <label class="checkbox checkbox-sm cursor-pointer"> 
+                                <input class="peer" type="checkbox">
+                                <div class="checkbox-indicator peer-checked:!bg-primary rounded-full !border-primary"> <i data-feather="check"></i></div>
+                              </label>
+                              <p>Home</p>
+                            </div>
+                            <div class="flex items-center gap-2"> 
+                              <svg class="w-4 h-4 stroke-title"> 
+                                <use href="../../assets/svg/_sprite.svg#Edit-Square"> </use>
+                              </svg>
+                              <svg class="w-4 h-4 stroke-title"> 
+                                <use href="../../assets/svg/_sprite.svg#Delete"> </use>
+                              </svg>
+                            </div>
+                          </div>
+                          <div class="flex flex-col gap-2"> 
+                            <h6 class="text-title font-bold">	Ms. Ila Runte DDS</h6>
+                            <p class="text-content3 text-xs"> <span class="font-semibold">Address: </span>	1531 E 23rd St S, Independence, Mississippi, US 64055</p>
+                            <p class="text-content3 text-xs"> <span class="font-semibold">Contact: </span>	(816) 252-4500                                        </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <h6 class="text-title font-medium mb-5">Shipping Method </h6>
+                    <div class="grid grid-cols-12 gap-card-gap mb-5"> 
+                      <div class="col-span-6">
+                        <div class="border border-border-light p-4">
+                          <div class="flex items-center gap-2 mb-1">
+                            <label class="checkbox checkbox-sm cursor-pointer"> 
+                              <input class="peer" type="checkbox">
+                              <div class="checkbox-indicator peer-checked:!bg-primary rounded-full !border-primary"> <i data-feather="check"></i></div>
+                            </label>
+                            <p class="text-title font-semibold">Standard Delivery - Free </p>
+                          </div>
+                          <p class="pl-6 text-content3 text-xs">Estimated 5-7 days shipping</p>
+                        </div>
+                      </div>
+                      <div class="col-span-6">
+                        <div class="border border-border-light p-4"> 
+                          <div class="flex items-center gap-2 mb-1">
+                            <label class="checkbox checkbox-sm cursor-pointer"> 
+                              <input class="peer" type="checkbox" checked>
+                              <div class="checkbox-indicator peer-checked:!bg-primary rounded-full !border-primary"> <i data-feather="check"></i></div>
+                            </label>
+                            <p class="text-title font-semibold">Express Delivery - $24 </p>
+                          </div>
+                          <p class="pl-6 text-content3 text-xs">Estimated 1-2 days shipping</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="flex justify-between items-center">
+                      <button class="btn bg-secondary text-xs text-white flex items-center gap-2 !w-fit !m-0" type="button"> <i class="w-4 h-4 stroke-white" data-feather="arrow-left"></i> Return to Shopping Cart</button>
+                      <button class="btn btn-primary text-xs text-white flex items-center gap-2 !w-fit !m-0" type="button">
+                          Proceed to Next<i class="w-4 h-4 stroke-white" data-feather="truck"></i></button>
+                    </div>
+                  </div>
                 </div>
                 <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0" data-tabContent="3">
-                  <p class="text-xs text-gray-500">Tabs are used to navigate and display different content around the website. abs are used to navigate and display different content around the website. </p>
+                  <div>
+                    <h5 class="text-title font-semibold mb-2">Payment Information </h5>
+                    <p class="text-content3 mb-5">Fill up the following information to send you the order</p>
+                    <div class="border border-border-light p-4 mb-5"> 
+                      <div class="flex gap-2 items-center justify-between">
+                        <div>
+                          <div class="flex items-center gap-2 mb-1">
+                            <label class="checkbox checkbox-sm cursor-pointer"> 
+                              <input class="peer" type="checkbox" checked>
+                              <div class="checkbox-indicator peer-checked:!bg-primary rounded-full !border-primary"> <i data-feather="check"></i></div>
+                            </label>
+                            <p class="text-title font-semibold">PayPal</p>
+                          </div>
+                          <p class="pl-6 text-content3 text-xs">You will be taken to the PayPal website to finish your transaction safely</p>
+                        </div><i class="fa-brands fa-cc-paypal text-2xl text-primary"></i>
+                      </div>
+                    </div>
+                    <div class="border border-border-light p-4 mb-5"> 
+                      <div class="flex gap-2 items-center justify-between mb-5">
+                        <div>
+                          <div class="flex items-center gap-2 mb-1">
+                            <label class="checkbox checkbox-sm cursor-pointer"> 
+                              <input class="peer" type="checkbox">
+                              <div class="checkbox-indicator peer-checked:!bg-primary rounded-full !border-primary"> <i data-feather="check"></i></div>
+                            </label>
+                            <p class="text-title font-semibold">Credit Card</p>
+                          </div>
+                          <p class="pl-6 text-content3 text-xs">Transferring money securely through your bank account. Mastercard, Visa, Discover, and Stripe are all accepted</p>
+                        </div><i class="fa-regular fa-credit-card text-2xl text-primary"></i>
+                      </div>
+                      <form class="theme-form flex flex-col gap-4 m-0" action="index.html">
+                        <div>
+                          <label for="cardholder">Card holder</label>
+                          <input type="text" id="cardholder" placeholder="Enter card holder name" required>
+                        </div>
+                        <div>
+                          <label for="cardholder">Card Number</label>
+                          <input type="number" id="cardholder" placeholder="Enter card number" required>
+                        </div>
+                        <div class="grid grid-cols-12 gap-5">
+                          <div class="col-span-6">
+                            <label for="expirydate">Expiry Date</label>
+                            <input type="number" id="expirydate" placeholder="MM/YY" required>
+                          </div>
+                          <div class="col-span-6">
+                            <label for="cvv">CVV</label>
+                            <input type="number" id="cvv" placeholder="Enter your last name" required>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                    <div class="border border-border-light p-4 mb-5"> 
+                      <div class="flex gap-2 items-center justify-between">
+                        <div>
+                          <div class="flex items-center gap-2 mb-1">
+                            <label class="checkbox checkbox-sm cursor-pointer"> 
+                              <input class="peer" type="checkbox">
+                              <div class="checkbox-indicator peer-checked:!bg-primary rounded-full !border-primary"> <i data-feather="check"></i></div>
+                            </label>
+                            <p class="text-title font-semibold">Cash On Delivery</p>
+                          </div>
+                          <p class="pl-6 text-content3 text-xs">After your order is delivered, make a cash payment</p>
+                        </div><i class="fa-solid fa-money-bill text-2xl text-primary"></i>
+                      </div>
+                    </div>
+                    <div class="flex justify-between items-center">
+                      <button class="btn bg-secondary text-xs text-white flex items-center gap-2 !w-fit !m-0" type="button"> <i class="w-4 h-4 stroke-white" data-feather="arrow-left"></i> Return to Shopping Cart</button>
+                      <button class="btn btn-primary text-xs text-white flex items-center gap-2 !w-fit !m-0" type="button">
+                          Proceed to Next<i class="w-4 h-4 stroke-white" data-feather="truck"></i></button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
