design wishlist page

--- a/html/unique/product.html
+++ b/html/unique/product.html
@@ -1237,8 +1237,8 @@
                         </ul>
                       </div>
                       <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4" data-tabContent="3">
-                        <div class="flex flex-col gap-3">
-                          <div class="border border-border-light border-dashed flex flex-col gap-3 p-3">
+                        <div class="flex flex-col gap-0">
+                          <div class="flex flex-col gap-3 p-3 first:border-b first:border-border-light first:border-dashed last:border-none">
                             <div class="flex items-center justify-between gap-2">
                               <div class="flex items-center gap-0"><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-content stroke-transparent" data-feather="star"></i></div><span class="text-xs text-content3 font-medium">06 Feb, 2023 </span>
                             </div>
@@ -1251,7 +1251,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="border border-border-light border-dashed flex flex-col gap-3 p-3">
+                          <div class="flex flex-col gap-3 p-3 first:border-b first:border-border-light first:border-dashed last:border-none">
                             <div class="flex items-center justify-between gap-2">
                               <div class="flex items-center gap-0"><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i></div><span class="text-xs text-content3 font-medium">24 Jan, 2023 </span>
                             </div>
