--- a/html/unique/shop.html
+++ b/html/unique/shop.html
@@ -2171,12 +2171,12 @@
                 <div class="divider w-full my-4 before:!bg-border-light after:!bg-border-light 2lg:my-3"></div>
                 <div class="flex items-center gap-3">
                   <label class="text-title text-sm font-medium" for="size">Sizes   </label>
-                  <div class="flex items-center">
-                    <button class="btn btn-md border border-border-light rounded-none text-title leading-none hover:bg-gray-extralight">S </button>
-                    <button class="btn btn-md btn-active text-title leading-none border border-border-light bg-gray-extralight rounded-none hover:bg-gray-extralight">M</button>
-                    <button class="btn btn-md border border-border-light rounded-none text-title leading-none hover:bg-gray-extralight">L</button>
-                    <button class="btn btn-md border border-border-light rounded-none text-title leading-none hover:bg-gray-extralight">XL</button>
-                  </div>
+                  <ul class="flex items-center gap-2">
+                    <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight">S </li>
+                    <li class="btn-active text-title leading-none w-8 h-8 flex items-center justify-center border border-border-light bg-gray-extralight rounded-full hover:bg-gray-extralight">M</li>
+                    <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight">L</li>
+                    <li class="border border-border-light rounded-full text-title leading-none w-8 h-8 flex items-center justify-center hover:bg-gray-extralight">XL</li>
+                  </ul>
                 </div>
                 <div class="divider w-full my-4 before:!bg-border-light after:!bg-border-light 2lg:my-3"></div>
                 <div class="flex flex-wrap gap-2 items-center capitalize 2lg:gap-1"> <a class="btn btn-primary text-white text-sm lg:px-2 lg:text-xs" href="cart.html">Add to cart         </a><a class="btn btn-secondary text-white text-sm lg:px-2 lg:text-xs" href="wishlist.html">Add to wishlist         </a><a class="btn btn-warning text-white text-sm lg:px-2 lg:text-xs" href="checkout.html">Buy it now         </a></div>
