--- a/html/unique/wishlist.html
+++ b/html/unique/wishlist.html
@@ -1136,7 +1136,7 @@
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
                   <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white">Add To Cart</button>
+                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
                   </div>
                 </div>
               </div>
@@ -1157,7 +1157,7 @@
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
                   <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white">Add To Cart</button>
+                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
                   </div>
                 </div>
               </div>
@@ -1178,7 +1178,7 @@
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
                   <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white">Add To Cart</button>
+                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
                   </div>
                 </div>
               </div>
@@ -1199,7 +1199,7 @@
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
                   <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white">Add To Cart</button>
+                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
                   </div>
                 </div>
               </div>
@@ -1220,7 +1220,7 @@
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
                   <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white">Add To Cart</button>
+                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
                   </div>
                 </div>
               </div>
@@ -1241,7 +1241,7 @@
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
                   <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white">Add To Cart</button>
+                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
                   </div>
                 </div>
               </div>
@@ -1262,7 +1262,7 @@
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
                   <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white">Add To Cart</button>
+                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
                   </div>
                 </div>
               </div>
@@ -1283,7 +1283,7 @@
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
                   <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white">Add To Cart</button>
+                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
                   </div>
                 </div>
               </div>
